--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -321,26 +321,23 @@ jobs:
           $batAll | Out-File -FilePath "$toolboxDesktop\Launch-ALL-Scripts.bat" -Encoding ASCII -Force
           
           # CrÃ©er un script PowerShell pour activer le toggle et lancer Tor
-          $torScript = @'
-# Configurer Tor pour auto-connect
-$torBrowserData = "C:\Tor Browser\Browser\TorBrowser\Data"
-$browserProfilePath = "$torBrowserData\Browser"
-if (-not (Test-Path $browserProfilePath)) { New-Item -Path $browserProfilePath -ItemType Directory -Force | Out-Null }
-$profiles = Get-ChildItem -Path $browserProfilePath -Directory -ErrorAction SilentlyContinue
-if ($profiles.Count -eq 0) {
-    $profilePath = "$browserProfilePath\profile.default"
-    New-Item -Path $profilePath -ItemType Directory -Force | Out-Null
-} else {
-    $profilePath = $profiles[0].FullName
-}
-$userPrefsPath = "$profilePath\user.js"
-'user_pref("extensions.torlauncher.start_tor", true);' | Out-File -FilePath $userPrefsPath -Encoding ASCII -Force
-'user_pref("extensions.torlauncher.prompt_at_startup", false);' | Out-File -FilePath $userPrefsPath -Encoding ASCII -Append
-'user_pref("extensions.torlauncher.quickstart", true);' | Out-File -FilePath $userPrefsPath -Encoding ASCII -Append
-Start-Process "C:\Tor Browser\Browser\firefox.exe"
-'@
           $torScriptPath = "$toolboxDesktop\Launch-Tor.ps1"
-          $torScript | Out-File -FilePath $torScriptPath -Encoding UTF8 -Force
+          "# Configurer Tor pour auto-connect" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Force
+          "`$torBrowserData = 'C:\Tor Browser\Browser\TorBrowser\Data'" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Append
+          "`$browserProfilePath = `"`$torBrowserData\Browser`"" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Append
+          "if (-not (Test-Path `$browserProfilePath)) { New-Item -Path `$browserProfilePath -ItemType Directory -Force | Out-Null }" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Append
+          "`$profiles = Get-ChildItem -Path `$browserProfilePath -Directory -ErrorAction SilentlyContinue" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Append
+          "if (`$profiles.Count -eq 0) {" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Append
+          "    `$profilePath = `"`$browserProfilePath\profile.default`"" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Append
+          "    New-Item -Path `$profilePath -ItemType Directory -Force | Out-Null" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Append
+          "} else {" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Append
+          "    `$profilePath = `$profiles[0].FullName" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Append
+          "}" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Append
+          "`$userPrefsPath = `"`$profilePath\user.js`"" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Append
+          "'user_pref(`"extensions.torlauncher.start_tor`", true);' | Out-File -FilePath `$userPrefsPath -Encoding ASCII -Force" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Append
+          "'user_pref(`"extensions.torlauncher.prompt_at_startup`", false);' | Out-File -FilePath `$userPrefsPath -Encoding ASCII -Append" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Append
+          "'user_pref(`"extensions.torlauncher.quickstart`", true);' | Out-File -FilePath `$userPrefsPath -Encoding ASCII -Append" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Append
+          "Start-Process 'C:\Tor Browser\Browser\firefox.exe'" | Out-File -FilePath $torScriptPath -Encoding UTF8 -Append
           
           # CrÃ©er un BAT qui lance le script PowerShell
           $torBat = "@echo off`npowershell.exe -ExecutionPolicy Bypass -File `"$torScriptPath`""
